# fabricium

./: .env.example  .gitignore  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml  release.yml
docs/: README.md  api-reference.md  architecture.md  conventions.md  data-models.md  fabricium-proposal.md  project-structure.md  setup.md  tech-stack.md  testing.md  workflows.md
docs/modules/: core.md  evals.md  git-utils.md  skills.md  state.md  testing.md
eval_results/: report_python-backend_20260712_173349.json
src/fabricium/: __init__.py  git_utils.py  prompts.py  skills.py  state.py
src/fabricium/evals/: __init__.py  config.py  example_rubrics.py  example_tasks.py  harness.py  judge.py  proxy.py  rubrics.py  runner.py  tasks.py
src/fabricium/testing/: __init__.py  assertions.py  fixtures.py  harness.py
tests/: conftest.py  test_assertions.py  test_git_utils.py  test_plugin.py  test_skills.py  test_state.py
tests/integration/: conftest.py  test_cli.py
tests/integration/test_plugin/: __init__.py  plugin.yaml
