[project]
name = "fabricium"
version = "0.1.4"
description = "Fabricium — Shared Hermes plugin infrastructure (CLI lifecycle, bundled skills, Git self-update, state persistence)"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "LaiTszKin", email = "laitszkin1206@gmail.com" }]

[dependency-groups]
dev = [
    "pytest>=8",
    "ruff>=0.8",
    "mypy>=1.16",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/fabricium"]

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W"]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "integration: tests that require a Docker-based Hermes environment",
    "fabricium_plugin_name: override plugin name for integration tests",
]

[tool.mypy]
strict = true
files = ["src/fabricium"]
